@@ -1,3 +1,7 @@
+Sun Jul 14 00:32:51 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (rb_big_aref): Less scan when the number is negative.
+
 Sun Jul 14 00:17:42 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (big_shift): Avoid signed integer overflow.
